--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
-{background: ur("homeless/child-crying.jpg");}
+ body{
+ 	background: url(child-crying.jpg);
+ 	background-repeat: no-repeat;
+ 	background-size: cover;
+}
+
+h1 {
+	text-align: center;
+	
+}
