--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
-#wrapper {
+body {
 	background-image: url("child.jpg");
 	background-size: cover;
 	height: 800px;
 	width: 1200px;
+}
+#hello1 {
+	margin: 300px auto;
+	text-align: center;
 }
