--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,32 @@
 body {
 	background-image: url("homeless.jpg");
 	background-size: cover;
-	
-	background-repeat: no-repeat;
 }
 
 #hello1 {
-	margin: 300px 400px;
+	margin: 300px 300px;
 	text-align: center;
 }
 h1 {
 	font-family: "big caslon";
-
-	font-size: 68px;
+	font-size: 70px;
 	color: #14EF0A;
 	text-transform: lowercase;
+	background-color: rgba(0, 0, 0, 0.4);
+	border-radius: 20px;
+	padding: 15px;
+	border: 4px solid #14EF0A;
+
 	}
 a {
 	text-decoration: none;
 }
-#enter {
-	display: block;
-	width: 174px;
-	height: 69;
-	margin: 300px 400px;
-	text-align: center;	
-	background: #00c775;
+#button1 {
+	border: 4px solid white;
+     /*padding: 0px 0px;*/
+     border-radius: 10px;
+     /*display: inline;*/
+     font-size: 57px;
+     background-color: rgba(0, 0, 0, 0.4);
+     color: white;
 }
